global variables now work!

--- a/compilamum/src/test/marm/index.html
+++ b/compilamum/src/test/marm/index.html
@@ -1,7 +1,7 @@
 <html>
-<script src="basic_function_test-client.js"></script>
-<body>
-  <form action="javascript:submit()">
+<script src="view_counter-client.js"></script>
+<body onload="javascript:pageload()">
+  <form action="javascript:click()">
     First name:<br>
     <input type="text" name="firstname" value="Mickey">
     <br>
