--- a/compilamum/src/test/marm/index.html
+++ b/compilamum/src/test/marm/index.html
@@ -1,14 +1,8 @@
 <html>
 <script src="view_counter-client.js"></script>
 <body onload="javascript:pageload()">
-  <form action="javascript:click()">
-    First name:<br>
-    <input type="text" name="firstname" value="Mickey">
-    <br>
-    Last name:<br>
-    <input type="text" name="lastname" value="Mouse">
-    <br><br>
-    <input type="submit" value="Submit">
-  </form>
+  <p>
+    Number of times this page has been loaded: <span id="counter"> Unknown </span>
+  </p>
 </body>
 </html>
