Started improving index.html

--- a/compilamum/src/test/marm/index.html
+++ b/compilamum/src/test/marm/index.html
@@ -1,14 +1,14 @@
-<html>
-<script src="basic_function_test-client.js"></script>
+<!DOCTYPE html>
+
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8" />
+  <title>Example Webpage</title>
+
+  <link rel="stylesheet" href="style.css"/>
+  <script src="basic_function_test-client.js"></script>
+</head>
 <body>
-  <form action="javascript:submit()">
-    First name:<br>
-    <input type="text" name="firstname" value="Mickey">
-    <br>
-    Last name:<br>
-    <input type="text" name="lastname" value="Mouse">
-    <br><br>
-    <input type="submit" value="Submit">
-  </form>
+  <div id="counter">Number of page loads: 10</div>
 </body>
 </html>
