--- a/compilamum/src/test/marm/index.html
+++ b/compilamum/src/test/marm/index.html
@@ -9,7 +9,7 @@
   <script src="view_counter-client.js"></script>
 </head>
 <body onload="javascript:pageload()">
-  <div id="text"><i>Number of times this page has been loaded:<i></div>
-  <div id="counter">Loading...</div>
+  <h1 id="text">Number of times this page has been loaded:</h1>
+  <h2 id="counter">Loading...</h2>
 </body>
 </html>
